# Smart_Parking

backend/: CMakeLists.txt  config.json
backend-node/: .env  .env.example  package-lock.json  package.json  parking_system.db  server-mysql.js  server.js  setup-db.js
backend/src/: Auth.cpp  Auth.h  Booking.cpp  Booking.h  Database.cpp  Database.h  Parking.cpp  Parking.h  Utils.cpp  Utils.h  main.cpp
database/: mysql_schema.sql  schema.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx  BackgroundEffects.css  api.js  index.css
frontend/src/components/: BookingsList.jsx  Login.jsx  Navbar.jsx  OwnerDashboard.jsx  ParkingCard.jsx  Register.js  Register.jsx  UserDashboard.jsx
